Fix unwanted horizontal scrolling for webpage

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
 
 body {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
